Add sunset time and countdown entities for solar-aware battery management
- Add SunsetTimeSensor: Shows expected sunset time as timestamp
- Add SunsetCountdownSensor: Shows time remaining until sunset in seconds
- Include human-readable countdown format (e.g., '3h 45m') in attributes
- Use Home Assistant's location configuration for accurate calculations
- Handle timezone and next-day sunset calculations automatically
- Add astral library dependency for astronomical calculations
- Update documentation with new entity descriptions
- Add comprehensive test suite for sunset functionality
- All 7 tests passing (3 original + 4 new sunset tests)

--- a/custom_components/battery_management/manifest.json
+++ b/custom_components/battery_management/manifest.json
@@ -12,7 +12,8 @@
   "issue_tracker": "https://github.com/your-username/ha-battery-management/issues",
   "quality_scale": "silver",
   "requirements": [
-    "homeassistant>=2023.1.0"
+    "homeassistant>=2023.1.0",
+    "astral>=3.2"
   ],
   "version": "1.0.0"
 }
