--- a/custom_components/battery_management/manifest.json
+++ b/custom_components/battery_management/manifest.json
@@ -12,8 +12,7 @@
   "issue_tracker": "https://github.com/your-username/ha-battery-management/issues",
   "quality_scale": "silver",
   "requirements": [
-    "homeassistant>=2023.1.0",
-    "astral>=3.2"
+    "homeassistant>=2023.1.0"
   ],
   "version": "1.0.0"
 }
